# castrads-radiator-identifier

./: README.md  iris_decision_tree  main.py  output.xlsx  pyproject.toml  ~$output.xlsx
flowchart-generation/: Flowchart.ipynb
pre-processing/: checks.ipynb  output.xlsx  pre-processing.ipynb  raw_dataset.xlsx
results-analysis/: misclassified_radiators_final.ipynb
templates/: flowchart.html  question.html  result.html  start.html
tool-code/: .gitignore  README.md  admin_routes.py  app_config.py  app_logging.py  decision_tree.py  dimension_defaults.py  flow_runtime.py  flow_views.py  flowchart_routes.py  main.py  model_store.py  output.xlsx  prepare_images.py  pyproject.toml  updated_radiator_data.xlsx  user_routes.py  vision_image_limits.py  vision_routes.py  vision_service.py  vision_workflow.py  web_templates.py  ~$updated_radiator_data.xlsx
tool-code/scripts/: verify_ambiguous.py
tool-code/templates/: admin.html  dimension_defaults.html  flow_config.html  flowchart.html  model_detail.html  question.html  result.html  start.html  train_config.html  vision_loading.html  vision_upload.html
